No need ConfigInterceptor  on resources files for example. Without this, we have also a "java.lang.IllegalStateException: Cannot create a session after the response has been committed" with googlebot on css/js files.